@@ -7,11 +7,11 @@ Standards-Version: 3.5.2
 
 Package: runit
 Architecture: any
-Depends: ${shlibs:Depends}
+Suggests: daemontools
 Description: minimal replacement for sysvinit using daemontools
- runit cooperates with djb's daemontools package to create a replacement for
- sysvinit. runit currently runs on Debian GNU/Linux but may be easily adapted
- to other unix operating systems using glibc. If runit runs for you on any
+ runit is a daemontools package alike replacement for sysvinit. runit
+ currently runs on Debian GNU/Linux, FreeBSD, OpenBSD, and may be easily
+ adapted to other unix operating systems. If runit runs for you on any
  other operating system or linux distribution, please let me know.
  .
  Warning: Replacing sysvinit can cause the system's boot to fail. Make sure
