@@ -25,9 +25,9 @@ Dependencies and runlevels</a>
 <a href="svwaitdown.8.html">The <tt>svwaitdown</tt> program</a><br>
 <a href="svwaitup.8.html">The <tt>svwaitup</tt> program</a>
 <hr>
-<i>runit</i> cooperates with the
-<a href="http://cr.yp.to/daemontools.html">daemontools</a> package to create
-a replacement for
+<i>runit</i> is a
+<a href="http://cr.yp.to/daemontools.html">daemontools</a> alike
+replacement for
 <a href="ftp://ftp.cistron.nl/pub/people/miquels/sysvinit/">sysvinit</a>.
 <i>runit</i> runs on <b>Debian GNU/Linux</b>, <b>OpenBSD 2.9</b>,
 <b>FreeBSD 4.4</b>. <i>runit</i> reportedly runs on <b>FreeBSD 4.3</b>,
@@ -40,7 +40,9 @@ system's boot to fail. Make sure you are able to recover and repair your
 system, for example if you run a boot loader, it should be able to pass
 <tt>init=/bin/sh</tt> to the kernel.
 <hr>
-<i>runit</i> is discussed on the <tt>&lt;supervision@list.skarnet.org&gt;</tt>
+<i>runit</i> is discussed on the
+<a href="http://skarnet.org/lists/#supervision">
+&lt;supervision@list.skarnet.org&gt;</a>
 mailing list. To subscribe send an empty email to
 <a href="mailto:supervision-subscribe@list.skarnet.org">
 &lt;supervision-subscribe@list.skarnet.org&gt;</a>.
