@@ -15,39 +15,46 @@ svwaitdown - waits for services controlled by <I>supervise(8)</I> to be down
 <B>svwaitdown</B> [ <B>-v</B> ] [ <B>-t</B> <I>sec</I> ] <I>services</I> 
 <H2><A NAME="sect2">Description</A></H2>
 <I>services</I> consist
-of one or more arguments. <P>
-<B>svwaitdown</B> checks each <I>service</I> given at the command
-line for being down. The <I>services</I> given at the command line must be controlled
-by <B><I>supervise</B>(8)</I>. <P>
-<B>svwaitdown</B> blocks, limited by a <I>timeout</I>, until all <I>services</I>
-are down or reports errors. 
+of one or more arguments. Each <I>service</I> directory must start with a slash.
+<P>
+<B>svwaitdown</B> checks each <I>service</I> given at the command line for being down.
+The <I>services</I> given at the command line must be controlled by <B><I>supervise</B>(8)</I>.
+<P>
+<B>svwaitdown</B> blocks, limited by a <I>timeout</I>, until all <I>services</I> are down or
+reports errors. 
 <H2><A NAME="sect3">Options</A></H2>
 
 <DL>
 
 <DT><B>-v</B> </DT>
-<DD>verbose. Print verbose messages to stderr.
-</DD>
+<DD>verbose. Print verbose messages to stderr. </DD>
 
-<DT><B>-t <I>sec</B> </I></DT>
+<DT><B>-t <I>sec</B>
+</I></DT>
 <DD>Set the timeout for waiting for <I>services</I> to become down to <I>sec</I> seconds.
 <I>sec</I> must be between 2 and 6000. Default is 600 (10 minutes). </DD>
+
+<DT><B>-x</B> </DT>
+<DD>exit. Wait
+for the corresponding <B><I>runsv</B>(8)</I> process to exit instead for the <I>service</I>
+to be down. This option should only be used by <B><I>runit</B>(8)</I> in stage 3 when
+<B><I>runsvdir</B>(8)</I> is already stopped. </DD>
 </DL>
 
 <H2><A NAME="sect4">Exit Codes</A></H2>
-<B>svwaitdown</B>
-returns 0 as soon as all <I>services</I> are down. <P>
-If a <I>service</I> is usually controlled
-by <B><I>supervise</B>(8)</I>, but no <B><I>supervise</B>(8)</I> process is currently running, <B>svwaitdown</B>
-treats this <I>service</I> as if it would be down. <P>
-For each <I>service</I> that causes
-an error while checking, <B>svwaitdown</B> increases the exit code by one and
-exits non zero. The maximum is 100. <P>
-<B>svwaitdown</B> returns 111 if the timeout
-<I>sec</I> was reached. 
+<B>svwaitdown</B> returns 0 as soon as
+all <I>services</I> are down. <P>
+If a <I>service</I> is usually controlled by <B><I>supervise</B>(8)</I>,
+but no <B><I>supervise</B>(8)</I> process is currently running, <B>svwaitdown</B> treats this
+<I>service</I> as if it would be down. <P>
+For each <I>service</I> that causes an error while
+checking, <B>svwaitdown</B> increases the exit code by one and exits non zero.
+The maximum is 100. <P>
+<B>svwaitdown</B> returns 111 if the timeout <I>sec</I> was reached.
+
 <H2><A NAME="sect5">See Also</A></H2>
-<I>svwaitup(8)</I>, <I>runit(8)</I>, <I>runit-init(8)</I>, <I>runsvdir(8)</I>,
-<I>runsv(8)</I>, <I>supervise(8)</I>, <I>svscan(8)</I> <P>
+<I>svwaitup(8)</I>, <I>runit(8)</I>, <I>runit-init(8)</I>, <I>runsvdir(8)</I>, <I>runsv(8)</I>, <I>supervise(8)</I>,
+<I>svscan(8)</I> <P>
  <I>http://smarden.org/runit/</I><BR>
   <I>http://cr.yp.to/daemontools.html</I><BR>
  
