@@ -13,7 +13,9 @@ svwaitup \- waits for services controlled by supervise(8) to be up
 .I services
 .SH DESCRIPTION
 .I services
-consist of one or more arguments.
+consist of one or more arguments. Each
+.I service
+directory must start with a slash.
 .P
 .B svwaitup
 checks each
