@@ -1,11 +1,3 @@
-/*
-  in /package/admin/daemontools/compile/ :
-  gcc -Wall -c svwaitdown.c && \
-    gcc -o svwaitdown svwaitdown.o unix.a byte.a time.a
-
-  Gerrit Pape <pape@smarden.org>
-*/
-
 #include <unistd.h>
 #include "strerr.h"
 #include "error.h"
@@ -38,6 +30,8 @@ int main (int argc, const char * const *argv) {
   int opt;
   unsigned long sec =600;
   int verbose =0;
+  int doexit =0;
+  int dokill =0;
   int fd;
   char status[18];
   int r;
@@ -47,13 +41,19 @@ int main (int argc, const char * const *argv) {
   
   progname =*argv;
   
-  while ((opt =getopt(argc, argv, "t:vV")) != opteof) {
+  while ((opt =getopt(argc, argv, "t:xkvV")) != opteof) {
     switch(opt) {
     case 't':
       scan_ulong(optarg, &sec);
       if ((sec < 2) || (sec > 6000)) {
 	usage();
       }
+      break;
+    case 'x':
+      doexit =1;
+      break;
+    case 'k':
+      dokill =1;
       break;
     case 'v':
       verbose =1;
@@ -71,8 +71,11 @@ int main (int argc, const char * const *argv) {
 
   dir =argv;
   tai_now(&start);
-  
   while (*dir) {
+    if (*dir[0] != '/') {
+      warn(*dir, ": service directory must start with a slash.", 0);
+      continue;
+    }
     if (chdir(*dir) == -1) {
       warn(*dir, ": unable to change directory: ", &strerr_sys);
       continue;
@@ -90,37 +93,64 @@ int main (int argc, const char * const *argv) {
     }
     close(fd);
 
-    fd = open_read("supervise/status");
-    if (fd == -1) {
-      warn(*dir, "unable to open supervise/status: ", &strerr_sys);
-      continue;
+    if (! doexit) {
+      fd = open_read("supervise/status");
+      if (fd == -1) {
+	warn(*dir, "unable to open supervise/status: ", &strerr_sys);
+	continue;
+      }
+      r = buffer_unixread(fd, status, sizeof status);
+      close(fd);
+      if (r < sizeof status) {
+	if (r == -1)
+	  warn(*dir, "unable to read supervise/status: ", &strerr_sys);
+	else
+	  warn(*dir, ": unable to read supervise/status: bad format.", 0);
+	continue;
+      }
+      pid = (unsigned char) status[15];
+      pid <<= 8; pid += (unsigned char) status[14];
+      pid <<= 8; pid += (unsigned char) status[13];
+      pid <<= 8; pid += (unsigned char) status[12];
+      if (! pid) {
+	/* ok, service is down */
+	if (verbose) strerr_warn3(INFO, *dir, ": down.", 0);
+	dir++;
+	continue;
+      }
     }
-    r = buffer_unixread(fd, status, sizeof status);
-    close(fd);
-    if (r < sizeof status) {
-      if (r == -1)
-	warn(*dir, "unable to read supervise/status: ", &strerr_sys);
-      else
-	warn(*dir, ": unable to read supervise/status: bad format.", 0);
-      continue;
-    }
-  
-    pid = (unsigned char) status[15];
-    pid <<= 8; pid += (unsigned char) status[14];
-    pid <<= 8; pid += (unsigned char) status[13];
-    pid <<= 8; pid += (unsigned char) status[12];
-    if (! pid) {
-      /* ok, service is down */
-      if (verbose) strerr_warn3(INFO, *dir, ": down.", 0);
-      dir++;
-      continue;
-    }
-
     tai_now(&now);
     tai_sub(&now, &now, &start);
     if (tai_approx(&now) >= sec) {
       /* timeout */
       if (verbose) strerr_warn2(INFO, "timeout.", 0);
+      if (dokill) {
+	dir =argv;
+	while (*dir) {
+	  if (chdir(*dir) == -1) {
+	    warn(*dir, ": unable to change directory: ", &strerr_sys);
+	    continue;
+	  }
+	  if ((fd =open_write("supervise/control")) == -1) {
+	    if (errno == error_nodevice) {
+	      if (verbose)
+		strerr_warn3(INFO, *dir,
+			     ": supervise not running.", 0);
+	      dir++;
+	    }
+	    else
+	      warn(*argv, ": unable to open supervise/control: ", &strerr_sys);
+	    continue;
+	  }
+	  if (write(fd, "k", 1) != 1)
+	    warn(*argv,
+		 ": unable to write to supervise/control: ", &strerr_sys);
+	  else
+	    strerr_warn3(INFO, *dir, ": killed.", 0);
+	  close(fd);
+	  dir++;
+	}
+      }
       exit(111);
     }
 
