@@ -2,6 +2,11 @@ runit 0.5.4
 Wed, 25 Sep 2002 12:13:46 +0200
   * man/runsv.8, man/runsvdir.8: new.
   * doc: use runsvdir/runsv instead of svscanboot/supervise.
+  * svwaitdown.c, svwaitup.c, man/svwaitdown.8, man/svwaitup.8: services
+    must start with slash.
+  * svwaitdown: new option -x: wait for runsv to exit instead for the
+    service to be down; new option -k: SIGKILL still running services if
+    timeout is reached.
 
 runit 0.5.3
 Tue, 24 Sep 2002 12:14:02 +0200
